youker-assistant (3.0.0-0ubuntu1) bionic; urgency=low

  * Fork youker-assistant(commit:764)
  * Upgrade from Qt4 to Qt5.
  * Add qtsingleapplication.
  * Let the child window display normal.
  * Add PingBack.
  * Rewrite systeminfo frame.
  * Rewrite setting frame.
  * Separate data and graphics.
  * Add Cpu.
  * Add Network.
  * Add memory rate.
  * Add cpu rate and idle rate.
  * Add processes, resources and file system manager.
  * Add auto startup manager.
  * Add monitor for auto startup manager.
  * Add monitor for file system.
  * Add QDbus module(system dbus and session dbus).
  * Make all dbus modules quit when the app quit.
  * Rewrite mainwindow.
  * Add shadow effect for window.
  * Rewrite cleaner ui module.
  * Rewrite theme ui module.
  * Scaning system with Thread.
  * Renice process priority.

 -- lixiang <lixiang@kylinos.cn>  Mon, 05 Mar 2018 18:19:34 +0800

youker-assistant (2.4.2-0ubuntu4) artful; urgency=low

  [hebing]
  * change judge of dynamic load sysinfo

 -- hebing <hebing@kylinos.cn>  Tue, 05 Dec 2017 09:21:22 +0800

youker-assistant (2.4.1-0ubuntu4) artful; urgency=low

  [hebing]
  * rm debug info in cdrowwidget.cpp
  * add info output in terminal if started repeated

 -- hebing <hebing@kylinos.cn>  Tue, 14 Nov 2017 11:03:25 +0800

youker-assistant (2.4.0-0ubuntu4) artful; urgency=low

  [hebing]
  * change cpu info from 4 cores cores to 4
  * add call for changeinfopage when click memoryinfo page
  * add a picture in skin
  * coded bootanimation in main.cpp

 -- hebing <hebing@kylinos.cn>  Fri, 10 Nov 2017 17:01:56 +0800

youker-assistant (2.3.0-0ubuntu4) artful; urgency=low

  [hebing]
  * adjust onclick method in common tool beause camera deleted
  * add comment for desktop file
  * add i18n for "Open File"

 -- hebing <hebing@kylinos.cn>  Thu, 09 Nov 2017 09:15:54 +0800

youker-assistant (2.2.13-0ubuntu4) artful; urgency=low

  [hebing]
  * change youker-assistant to kylin-assistant in desktop file