@@ -2,9 +2,9 @@ Source: youker-assistant
 Section: misc
 Priority: optional
 Maintainer: Ubuntu Kylin Team <ubuntukylin-members@list.launchpad.net>
-Uploaders:
- lixiang <lixiang@kylinos.cn>
-Build-Depends: debhelper (>= 9),
+Uploaders: handsome_feng <jianfengli@ubuntukylin.com>,
+           lixiang <lixiang@kylinos.cn>
+Build-Depends: debhelper (>= 11),
                python3-all (>= 3.1),
                python3-apt (>= 0.7.100.3~),
                python3-dev,
@@ -22,7 +22,7 @@ Build-Depends: debhelper (>= 9),
                libglib2.0-dev (>= 2.46.0),
                libgtop2-dev,
                libsystemd-dev (>= 209) [linux-any]
-Standards-Version: 3.9.8
+Standards-Version: 4.1.3
 X-Python3-Version: >= 3.1
 Homepage: https://github.com/KylinAppCenter/youker-assistant
 
@@ -48,8 +48,8 @@ Depends: python3-dbus,
          ${python3:Depends},
          ${shlibs:Depends},
 Description: Integrated tool to aid in routine system maintenance tasks
- Kylin Assistant is a tool designed to help Ubuntu and Ubuntu Kylin 
- desktop users manage and maintain many aspects of their working 
+ Kylin Assistant is a tool designed to help Ubuntu and Ubuntu Kylin
+ desktop users manage and maintain many aspects of their working
  environment conveniently in a single application, providing a consistent
  user experience.
  .
